LOCAL/whoami/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: whoami
spec:
  selector:
    matchLabels:
      app: whoami
  spec:
    containers:
      - name: whoami
        image: containous/whoami
        ports:
          - name: http
            containerPort: 80
            protocol: TCP
