LOCAL/whoami/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-server-ingress
  namespace: whoami
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-staging"
    kubernetes.io/tls-acme: "true"
    certmanager.k8s.io/acme-challenge-type: "http01" 
spec:
  rules:
  - host: whoami.local.slatsh.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service: 
            name: whoami
            port:
              name: https
  tls:
  - hosts:
    - whoami.local.slatsh.com
    secretName: whoami-secret
